--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "castle-config",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "https://github.com/YanCastle/castle-config",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "castle-crypto": "^1.0.1",
+    "castle-utils": "^1.0.2",
     "koa": "^2.6.2",
     "sequelize": "^4.41.2"
   }
