--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctsy/config",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "repository": "https://github.com/YanCastle/castle-config",
   "author": "yanpengquan",
   "license": "MIT",
@@ -14,21 +14,19 @@
   ],
   "scripts": {},
   "devDependencies": {
-    "@types/koa": "~2.0.47",
-    "@types/koa-send": "~4.1.1",
-    "@types/node": "~10.12.10",
-    "@types/validator": "~12.0.1"
+    "@types/koa-send": "*",
+    "@types/node": "*",
+    "@types/validator": "*"
   },
   "dependencies": {
-    "@ctsy/common": "~1.0",
-    "@ctsy/crypto": "~1.0",
-    "@ctsy/hook": "~0.0",
-    "@ctsy/model": "~2.0",
-    "castle-utils": "~1.0",
-    "koa": "~2.6.2",
-    "koa-send": "~5.0.0",
-    "mysql2": "~2.0",
-    "mz": "~2.7.0",
-    "sequelize": "~5.21.2"
+    "@ctsy/common": "*",
+    "@ctsy/crypto": "*",
+    "@ctsy/hook": "*",
+    "@ctsy/model": "*",
+    "castle-utils": "*",
+    "koa-send": ">=5.0.0",
+    "mysql2": ">=2.0",
+    "mz": ">=2.7.0",
+    "sequelize": ">=5.21.2"
   }
 }
