--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,12 @@
     "moduleResolution": "node",
     "outDir": "dist",
     "experimentalDecorators": true,
-
     "strictFunctionTypes": false
-  }
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
