--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ctsy/config",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "repository": "https://github.com/YanCastle/castle-config",
   "author": "yanpengquan",
   "license": "MIT",
@@ -25,11 +25,10 @@
     "@ctsy/common": "*",
     "@ctsy/crypto": "*",
     "@ctsy/hook": "*",
-    "@ctsy/model": "*",
     "castle-utils": "*",
-    "koa-send": ">=5.0.0",
-    "mysql2": ">=2.0",
-    "mz": ">=2.7.0",
-    "sequelize": ">=5.21.2"
+    "koa-send": "^5.0.1",
+    "mysql2": "*",
+    "mz": "*",
+    "sequelize": "*"
   }
 }
